src/test/resources/acceptance/reject/statementAsWhileExpression.ul
int bar ()
{
    int id1;

    while (true;) {
        id1 = "hello";
    }
}
